--- a/templates/events/events_list.html
+++ b/templates/events/events_list.html
@@ -57,11 +57,11 @@
         </div>
         <!-- Modal to confirm post deletion -->
         <div class="modal fade" id="mod-delete-event" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            aria-labelledby="modallabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Delete Event</h5>
+                        <h5 class="modal-title" id="modallabel">Delete Event</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
