--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -1,35 +1,32 @@
 {% extends 'base.html' %}
 
-{% block title %}Contact us{% endblock %}
-
 {% load static %}
 
 {% block content %}
 
-<div class="row g-0 contact-container mb-2">
-    <div class="col-md-6">
+<div class="row g-0 contact-container mb-5">
+    <div class="col-md-6 mb-5">
         <img id="loader" src="{% static 'images/car-lights-flashed.gif' %}" alt="Car">
         <img id="contact-img" src="{% static 'images/car-lights.gif' %}" alt="Car lights">
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 mb-5 px-5">
         <div class="row">
             <div class="col mt-5 mb-2">
-                <h2 id="head">Contact Us</h2>
+                <h2>Contact Us</h2>
             </div>
         </div>
         <div class="row">
             <div class="col mb-2">
                 <p>Vintage Cars strives to bring the best customer service to everyone. So we provide a section where
-                    you can reach out to us faster and easier. <br><br>For any enquiry please fill up this form and we
-                    will get in touch with you very soon. <br>To rent a car, press <a href="#">here</a>!</p>
+                    you can reach out to us faster and easier.
             </div>
             <form id="contact-form">
                 <!--  onsubmit="return sendMail(this) -->
                 {% csrf_token %}
                 <input type="hidden" value="{{ USER_ID }}" id="user_id">
-                <input class="form-control" id="name" type="text" name="user_name" placeholder="Complete name" required>
-                <input class="form-control" id="email" type="email" name="user_email" placeholder="Email" required>
-                <textarea class="form-control mb-1" id="message" name="message" id="" cols="30" rows="5" placeholder="Your message here" required></textarea>
+                <input class="form-control my-3" id="name" type="text" name="user_name" placeholder="Complete name" required>
+                <input class="form-control my-3" id="email" type="email" name="user_email" placeholder="Email" required>
+                <textarea class="form-control my-3" id="message" name="message" id="" cols="30" rows="5" placeholder="Your message here" required></textarea>
                 <!-- <input type="submit" name="submit" id="submit_contact" class="btn btn-secondary" value="Send message"> -->
                 <button type="submit" class="btn btn-secondary px-4 my-2" id="submit" enctype="multipart/form-data">Submit</button>
             </form>
@@ -39,6 +36,8 @@
 <div class="row">
 </div>
 {% endblock %}
+
+{% block title %}Contact Us{% endblock %}
 
 {% block script %}
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
