--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8 offset-md-2 my-3">
+        <div class="col-md-8 offset-md-2 my-3 px-3">
             <p>Owning your own classic car is out of reach and very expensive. Some parts are not fabricated
                 already and some are very hazardous for the environment. But here in Vintage Cars we bring the world of
                 classic cars to a whole new level by posting your favorite cars and making these classic or vintage
@@ -16,7 +16,7 @@
                 dream car – for whatever occasion – and ensure the whole process is smooth and stress-free from the
                 start, right up until the finish line. <br><br>We provide a space for avid fans of classic cars to share
                 their favorite car and, of course, their own personal classic car. We also have a section for events to
-                check any gathering and convention near you. <br><br>If you’ve ever dreamed of driving a vintage car for
+                check for any upcoming events near you. <br><br>If you’ve ever dreamed of driving a vintage car for
                 the weekend and leaving your stresses behind, turning heads by arriving at an event in a unique retro
                 car or making that special day extra memorable, see how we can help match you to the perfect vehicle.
                 <br><br>Have fun and enjoy the experience of driving your dream!
