--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -18,7 +18,8 @@
         <div class="row">
             <div class="col mb-2">
                 <p>Vintage Cars strives to bring the best customer service to everyone. So we provide a section where
-                    you can reach out to us faster and easier.
+                    you can reach out to us faster and easier. <br><br> If you are interested in renting any of our
+                    classic cars, just drop your email address and we will contact you as soon as possible!
             </div>
             <form id="contact-form">
                 <!--  onsubmit="return sendMail(this) -->
