--- a/templates/404.html
+++ b/templates/404.html
@@ -46,10 +46,7 @@
                         <img src="{% static 'images/animated-car-mechanic.gif' %}" alt="Mechanic gif">
                     </div>
                 </div>
-                <p class="text-center">An error is found. Your car is undergoing some tests. But you can still go back <br> home and look for another one.</p>
-                <div class="d-flex justify-content-center">
-                    <a href="#" class="btn vintage-btn">Home <i class="fas fa-home"></i></a>
-                </div>
+                <p class="text-center">An error is found. Your car is undergoing some tests. But you can still go back <br> <a href="{% url 'home' %}" class="t-red link-home">Home <i class="fas fa-home"></i></a> and look for another one.</p>
             </div>
         </div>
     </div>
