--- a/templates/500.html
+++ b/templates/500.html
@@ -48,9 +48,7 @@
                         <img src="{% static 'images/grease-monkey.gif' %}" alt="Grease Monkey mechanic">
                     </div>
                 </div>
-                <p class="text-center">Something went wrong... But don't worry our grease monkey is trying to fix it. We
-                    will drive you back <br> <a href="{% url 'home' %}" class="t-red link-home">Home <i
-                            class="fas fa-home"></i></a> so you can have some tea.</p>
+                <p class="text-center">Something went wrong... But don't worry our grease monkey is trying to fix it.<br> We will drive you back <a href="{% url 'home' %}" class="t-red link-home">Home <i class="fas fa-home"></i></a> so you can have some tea.</p>
             </div>
         </div>
     </div>
