--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -36,7 +36,7 @@
                     <div class="carousel-item">
                         <img src="{% static 'images/vc-blue-sedan.jpg' %}" class="d-block w-100" alt="Blue Sedan">
                         <div class="carousel-caption d-block black-bg">
-                            <h3>Bring the past to the present</h3>
+                            <h3>The simplicity of beauty is the complexity it attracts</h3>
                             <p>Show the world the beauty that lies in each classic cars!</p>
                         </div>
                     </div>
