Edit style of 404 page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -689,6 +689,10 @@ iframe[style] {
     width: 100px;
 }
 
+.msg-text img {
+    width: 200px;
+}
+
 
 /* -----------  Responsive --------------------------------------------------------------------------------------- */
 
