--- a/templates/404.html
+++ b/templates/404.html
@@ -39,7 +39,7 @@
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <div class="row">
-                    <div class="col d-flex justify-content-center">
+                    <div class="col d-flex justify-content-center msg-text">
                         <img src="{% static 'images/error-404.png' %}" alt="404 Error">
                     </div>
                 </div>
