--- a/templates/cars/cars.html
+++ b/templates/cars/cars.html
@@ -52,8 +52,10 @@
 					<div class="row">
 						<div class="col">
 							<article class="text-left">
-								<h2>{{ post.car_model_title }}</h2>
-								<h4>({{ post.year_manufactured }})</h4>
+								<a href="{% url 'car_detail' post.id %}" class="text-decoration-none text-white">
+									<h2>{{ post.car_model_title }}</h2>
+									<h4>({{ post.year_manufactured }})</h4>
+								</a>
 							</article>
 						</div>
 					</div>
