--- a/templates/404.html
+++ b/templates/404.html
@@ -49,8 +49,8 @@
                     </div>
                 </div>
                 <p class="text-center">An error is found. Your car is undergoing some tests. But you can still go back
-                    <br> <a href="{% url 'home' %}" class="t-red link-home">Home <i class="fas fa-home"></i></a> and
-                    look for another one.</p>
+                    <a href="{% url 'home' %}" class="t-red link-home">Home <i class="fas fa-home"></i></a> and look for
+                    another one.</p>
             </div>
         </div>
     </div>
