--- a/templates/base.html
+++ b/templates/base.html
@@ -16,17 +16,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
         integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href=
-    'https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/ui-lightness/jquery-ui.css'
-                rel='stylesheet'>
+    <link href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/ui-lightness/jquery-ui.css'
+        rel='stylesheet'>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- scripts fontawesome, sweetalert2, jquery -->
     <script src="https://kit.fontawesome.com/4c85c0a16f.js" crossorigin="anonymous"></script>
-        <!-- Sweetalert2 -->
+    <!-- Sweetalert2 -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    
+
     <title>
         {% block title %} Vintage Cars {% endblock %}
     </title>
@@ -35,7 +34,7 @@
 <body>
     <!-- Message tags -->
     {% include 'components/_message.html' %}
-    
+
     <!-- Navbar -->
     {% include 'components/_navbar.html' %}
 
