--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -25,11 +25,14 @@
                 <!--  onsubmit="return sendMail(this) -->
                 {% csrf_token %}
                 <input type="hidden" value="{{ USER_ID }}" id="user_id">
-                <input class="form-control my-3" id="name" type="text" name="user_name" placeholder="Complete name" required>
+                <input class="form-control my-3" id="name" type="text" name="user_name" placeholder="Complete name"
+                    required>
                 <input class="form-control my-3" id="email" type="email" name="user_email" placeholder="Email" required>
-                <textarea class="form-control my-3" id="message" name="message" id="" cols="30" rows="5" placeholder="Your message here" required></textarea>
+                <textarea class="form-control my-3" id="message" name="message" id="" cols="30" rows="5"
+                    placeholder="Your message here" required></textarea>
                 <!-- <input type="submit" name="submit" id="submit_contact" class="btn btn-secondary" value="Send message"> -->
-                <button type="submit" class="btn btn-secondary px-4 my-2" id="submit" enctype="multipart/form-data">Submit</button>
+                <button type="submit" class="btn btn-secondary px-4 my-2" id="submit"
+                    enctype="multipart/form-data">Submit</button>
             </form>
         </div>
     </div>
@@ -44,9 +47,9 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script type="text/javascript">
     let user_id = document.getElementById("user_id").value;
-    (function(){
+    (function () {
         emailjs.init(user_id);
-        })();
+    })();
 </script>
 <script src="{% static 'js/sendemail.js' %}"></script>
 {% endblock %}
