--- a/templates/registration/user_profile.html
+++ b/templates/registration/user_profile.html
@@ -77,8 +77,8 @@
                                     data-bs-placement="bottom" title="Read more">
                                     <i class="far fa-eye hvr-icon"></i>
                                 </a>
-                                <a href="{% url 'edit_car' post.id %}" class="hvr-icon-grow-rotate" data-bs-toggle="tooltip"
-                                    data-bs-placement="bottom" title="Edit post">
+                                <a href="{% url 'edit_car' post.id %}" class="hvr-icon-grow-rotate"
+                                    data-bs-toggle="tooltip" data-bs-placement="bottom" title="Edit post">
                                     <i class="fas fa-pen hvr-icon"></i>
                                 </a>
                                 <button type="button" class="t-white hvr-icon-drop delete-btn" data-bs-toggle="modal"
@@ -132,7 +132,7 @@
         {% endif %}
         {% endfor %}
     </div>
-        {% else %}
+    {% else %}
     <div class="row">
         <div class="col-md-8 offset-md-2 mt-5 pt-3 text-center">
             <p>Please log in to view and edit your posts.</p>
