--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -21,9 +21,15 @@
                     <li class="nav-item mx-1">
                         <a class="nav-link {{ events }}" href="{% url 'events' %}">Event</a>
                     </li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item mx-1">
+                            <a class="nav-link {{ user_profile }}" href="{% url 'user_profile' %}">Profile</a>
+                        </li>
+                    {% else %}
                     <li class="nav-item mx-1">
-                        <a class="nav-link {{ user_profile }}" href="{% url 'user_profile' %}">Profile</a>
+                        <a class="nav-link {{ user_profile }}" href="{% url 'user_profile' %}">Log In</a>
                     </li>
+                    {% endif %}
                     <li class="nav-item mx-1">
                         <a class="nav-link {{ contact }}" href="{% url 'contact' %}">Contact Us</a>
                     </li>
