Add style to user_profile page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -756,6 +756,10 @@ iframe[style] {
         display: none;
     }
     
+    .nav .text-link {
+        font-size: 10px;
+    }
+
     #navbarResponsive {
         top: 106px;
     }
