Edit root colors

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,11 +6,11 @@
 
 :root {
     /* colors scheme */
-    --vintage-drk-brown: #6E5644;
+    --vintage-drk-brown: #6F5643;
     --vintage-white: #f3f3f3;
     --vintage-brown: #b1987f;
-    --vintage-orange: #D3A24C;
-    --vintage-yellow: #ECE7C2;
+    --vintage-orange: #D2A24C;
+    --vintage-yellow: #ECE6C2;
     --vintage-red: #CD6C4A;
     --vintage-green: #73BDA8;
     --vintage-trans-black: rgba(0, 0, 0, .8);
