Edit code and add screenshots

--- a/templates/registration/user_profile.html
+++ b/templates/registration/user_profile.html
@@ -43,6 +43,11 @@
                         Log In <span><i class="fas fa-sign-in-alt hvr-icon"></i></span>
                     </a>
                 </li>
+                <li>
+                    <a href="{% url 'register' %}" class="nav-link add-link t-white mx-2 hvr-icon-pop">
+                        Sign up <span><i class="fas fa-user-plus hvr-icon"></i></span>
+                    </a>
+                </li>
             </ul>
             {% endif %}
         </div>
