--- a/templates/registration/user_profile.html
+++ b/templates/registration/user_profile.html
@@ -40,12 +40,14 @@
             <ul class="nav col-10 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li>
                     <a href="{% url 'login' %}" class="nav-link add-link t-white mx-2 hvr-icon-bob">
-                        Log In <span><i class="fas fa-sign-in-alt hvr-icon"></i></span>
+                        <span class="text-link">Log In</span> 
+                        <i class="fas fa-sign-in-alt hvr-icon"></i>
                     </a>
                 </li>
                 <li>
                     <a href="{% url 'register' %}" class="nav-link add-link t-white mx-2 hvr-icon-pop">
-                        Sign up <span><i class="fas fa-user-plus hvr-icon"></i></span>
+                        <span class="text-link">Sign Up</span> 
+                        <i class="fas fa-user-plus hvr-icon"></i>
                     </a>
                 </li>
             </ul>
